cloudify/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudify
  labels:
    app.kubernetes.io/name: cloudify
    app.kubernetes.io/component: platform
