cloudify/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudify
  namespace: cloudify
  labels:
    app.kubernetes.io/name: cloudify
    app.kubernetes.io/component: web
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: cloudify
    app.kubernetes.io/component: web
---
apiVersion: v1
kind: Service
metadata:
  name: cloudify-metrics
  namespace: cloudify
  labels:
    app.kubernetes.io/name: cloudify
    app.kubernetes.io/component: metrics
spec:
  type: ClusterIP
  ports:
    - name: metrics
      port: 3000
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: cloudify
    app.kubernetes.io/component: web
